# json-typedef-codegen

./: .gitignore  README.md
cpp/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  package.json  shell.nix
cpp/include/: common.hpp  deserialize.hpp  json_data.hpp  json_reader.hpp  json_writer.hpp  napi.hpp  nlohmann.hpp  nlohmann_reader.hpp  serialize.hpp  simd.hpp  simd_reader.hpp  stream_serializer.hpp  string_serializer.hpp
cpp/src/: common.cpp  deserialize.cpp  internal.hpp  json_data.cpp  json_reader.cpp  json_writer.cpp  spec_reader.hpp  spec_writer.hpp
cpp/src/napi/: array.hpp  object.cpp  value.cpp  value.hpp
cpp/src/napi_reader/: array.cpp  object.cpp  object.hpp  value.cpp  value.hpp
cpp/src/napi_writer/: serializer.cpp  serializer.hpp
cpp/src/nlohmann/: value.hpp
cpp/src/nlohmann_reader/: array.cpp  array.hpp  object.cpp  object.hpp  value.cpp
cpp/src/nlohmann_writer/: serializer.cpp  serializer.hpp
cpp/src/simd_json/: array.cpp  array.hpp  base.cpp  object.cpp  object.hpp  value.cpp  value.hpp
cpp/src/stream_writer/: serializer.cpp  serializer.hpp
cpp/src/string_writer/: serializer.cpp  serializer.hpp
cpp/tests/: main.cpp  simd_json.cpp
cpp/tests/gtests/: basics.cpp  basics_deserialize.cpp  basics_serialize.cpp  common_serialization.hpp  cpp_config.json  dictionary.cpp  json_data_serialize.cpp  nlohmann_reader.cpp  nlohmann_writer.cpp  nulls_and_opts.cpp  nulls_and_opts_serialize.cpp  reader_clone.cpp  roots.cpp  simd_json.cpp
cpp/tests/gtests/schemas/: basic_disc.jtd.json  basic_enum.jtd.json  basic_struct.jtd.json  dictionary.jtd.json  nullable_enum.jtd.json  nullable_struct.jtd.json  optional_props.jtd.json  primitives.jtd.json
cpp/tests/napi_tests/: in_napi.cpp  module_napi.cpp  out_napi.cpp  utils.hpp
crates/cli/: Cargo.toml
crates/cli/src/: cli.yaml  main.rs
crates/core/src/codegen/: ast.rs  mod.rs
crates/target_cpp/: Cargo.toml
crates/target_cpp/src/: cpp_types.rs  lib.rs  props.rs  state.rs
crates/target_cpp/src/cpp_snippets/: disc_declare.cpp  disc_from_json.cpp  disc_to_json.cpp  entries_array.cpp  enum_from_json.cpp  enum_to_json.cpp  internal_code_array.cpp  internal_code_enum_idx.cpp  internal_code_ns_header.cpp  internal_code_object.cpp  internal_code_raw_json.cpp  internal_code_unique_ptr.cpp  internal_code_val_idx.cpp  mod.rs  prim_from_json.cpp  struct_from_json.cpp  struct_to_json.cpp  vary_from_json.cpp  vary_to_json.cpp
crates/target_cpp/src/cpp_types/: alias.rs  containers.rs  cpp_enum.rs  cpp_struct.rs  disc.rs  mod.rs  primitives.rs  shared.rs
crates/target_rust/: Cargo.toml
crates/target_rust/output/basic_discriminator/: mod.rs
crates/target_rust/output/basic_enum/: mod.rs
crates/target_rust/output/basic_properties/: mod.rs
crates/target_rust/output/custom_overrides/: mod.rs
crates/target_rust/output/definition_name_collisions/: mod.rs
crates/target_rust/output/description/: mod.rs
crates/target_rust/output/discriminator_optional_properties/: mod.rs
crates/target_rust/output/elements/: mod.rs
crates/target_rust/output/empty_and_nonascii_definitions/: mod.rs
crates/target_rust/output/empty_and_nonascii_enum_values/: mod.rs
crates/target_rust/output/empty_and_nonascii_properties/: mod.rs
crates/target_rust/output/enum_collisions/: mod.rs
crates/target_rust/output/enum_variant_collisions/: mod.rs
crates/target_rust/output/geojson/: mod.rs
crates/target_rust/output/initialisms/: mod.rs
crates/target_rust/output/keywords/: mod.rs
crates/target_rust/output/nullable_discriminator/: mod.rs
crates/target_rust/output/nullable_elements/: mod.rs
crates/target_rust/output/nullable_enum/: mod.rs
crates/target_rust/output/nullable_properties/: mod.rs
crates/target_rust/output/nullable_references/: mod.rs
crates/target_rust/output/nullable_timestamp_property/: mod.rs
crates/target_rust/output/optional_properties/: mod.rs
crates/target_rust/output/property_name_collisions/: mod.rs
crates/target_rust/output/reference/: mod.rs
crates/target_rust/output/root_boolean/: mod.rs
crates/target_rust/output/root_empty/: mod.rs
crates/target_rust/output/root_float32/: mod.rs
crates/target_rust/output/root_float64/: mod.rs
crates/target_rust/output/root_int16/: mod.rs
crates/target_rust/output/root_int32/: mod.rs
crates/target_rust/output/root_int8/: mod.rs
crates/target_rust/output/root_nullable_string/: mod.rs
crates/target_rust/output/root_nullable_timestamp/: mod.rs
crates/target_rust/output/root_string/: mod.rs
crates/target_rust/output/root_timestamp/: mod.rs
crates/target_rust/output/root_uint16/: mod.rs
crates/target_rust/output/root_uint32/: mod.rs
crates/target_rust/output/root_uint8/: mod.rs
crates/target_rust/output/type_collisions/: mod.rs
crates/target_rust/output/values/: mod.rs
crates/target_rust/src/: lib.rs
crates/test/src/: lib.rs
