[package]
edition = "2021"
name = "jtd_codegen_target_cpp"
version = "0.5.0"

[dependencies]
anyhow = "1.0"
jtd-codegen = {path = "../core"}
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
jtd_codegen_test = {path = "../test"}
serde_test = "1.0.177"
